구글 로그인, 로그아웃, 회원탈퇴

--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -13,4 +13,10 @@
         android:layout_height="wrap_content"
         android:text="구글 로그아웃" />
 
+    <Button
+        android:id="@+id/btn_google_revoke"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="구글 회원탈퇴" />
+
 </LinearLayout>
