--- a/app/src/main/res/layout/fragment_menu4.xml
+++ b/app/src/main/res/layout/fragment_menu4.xml
@@ -1,13 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/text_view_menu4_guide"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@id/btn_menu4_make"
+        android:layout_centerHorizontal="true"
         android:gravity="center"
-        android:text="MENU 4"/>
+        android:text="진행중인 독서 마라톤이 없습니다.\n 시작해보세요!"
+        android:textColor="@color/black"
+        android:textSize="20dp"
+        android:visibility="invisible" />
+
+    <Button
+        android:id="@+id/btn_menu4_make"
+        android:layout_width="200dp"
+        android:layout_height="80dp"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="20dp"
+        android:text="독서마라톤 시작하기"
+        android:visibility="invisible" />
 
 
-</LinearLayout>
+    <Button
+        android:id="@+id/btn_menu4_delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:text="마라톤 삭제" />
+
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_maratonitem"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/btn_menu4_delete">
+
+    </android.support.v7.widget.RecyclerView>
+
+</RelativeLayout>
