--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,11 +7,22 @@
     android:layout_height="match_parent"
     tools:context=".LoginActivity">
 
+
+    <ImageView
+        android:id="@+id/image_login_logo"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:layout_centerInParent="true"
+        android:background="@drawable/digimon"/>
+
+
     <com.google.android.gms.common.SignInButton
         android:id="@+id/btn_google_login"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true">
+        android:layout_below="@id/image_login_logo"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp">
 
     </com.google.android.gms.common.SignInButton>
 
