--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -20,13 +20,14 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1">
 
-            <ListView
-                android:id="@+id/listview_chat"
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycler_view_chat"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -37,7 +38,7 @@
             <EditText
                 android:id="@+id/edittext_chat"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="60dp"
                 android:layout_weight="8" />
 
             <Button
