--- a/app/src/main/res/layout/item_chat_bubble.xml
+++ b/app/src/main/res/layout/item_chat_bubble.xml
@@ -4,7 +4,8 @@
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
-        android:layout_width="wrap_content"
+        android:id="@+id/cardview_chat"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <RelativeLayout
@@ -21,12 +22,12 @@
                     android:id="@+id/image_chat_profile"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:layout_marginTop="10dp"
                     android:layout_marginLeft="5dp"
-                    android:layout_marginBottom="5dp"
-                    android:background="@drawable/digimon" />
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="5dp" />
 
                 <TextView
+                    android:id="@+id/text_view_chat_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -49,11 +50,10 @@
                 android:id="@+id/text_view_chat_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/text_view_chat_chat"
-                android:layout_alignLeft="@id/text_view_chat_chat"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentBottom="true"
                 android:text="시간"
                 android:textSize="10dp" />
-
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 </RelativeLayout>
