--- a/app/src/main/res/layout/fragment_menu3.xml
+++ b/app/src/main/res/layout/fragment_menu3.xml
@@ -1,12 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_margin="100dp">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="MENU 3"/>
+        android:text="게시판"
+        android:textSize="30dp"
+        android:layout_gravity="center"
+        android:layout_marginBottom="150dp"/>
+
+    <Button
+        android:id="@+id/btn_in_board"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="30dp"
+        android:text="게시판 들어가기"
+        android:textSize="20dp" />
+
+    <Button
+        android:id="@+id/btn_search_board"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="게시판 검색"
+        android:textSize="20dp"/>
+
+    <Button
+        android:id="@+id/btn_my_board"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:text="내가 쓴 글"
+        android:textSize="20dp"/>
 
 </LinearLayout>
