--- a/app/src/main/res/layout/item_chat_bubble.xml
+++ b/app/src/main/res/layout/item_chat_bubble.xml
@@ -1,59 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/cardview_chat"
-        android:layout_width="match_parent"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cardview_chat"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:cardElevation="2dp">
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-        <RelativeLayout
+        <LinearLayout
+            android:id="@+id/layout_chat_profile"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <LinearLayout
-                android:id="@+id/layout_chat_profile"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/image_chat_profile"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="5dp" />
-
-                <TextView
-                    android:id="@+id/text_view_chat_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="순눈이" />
-
-            </LinearLayout>
-
-
-            <TextView
-                android:id="@+id/text_view_chat_chat"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
+            <ImageView
+                android:id="@+id/image_chat_profile"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="5dp"
                 android:layout_marginTop="10dp"
-                android:layout_toRightOf="@id/layout_chat_profile"
-                android:text="채팅 내용"
-                android:textSize="12dp" />
+                android:layout_marginBottom="5dp" />
 
             <TextView
-                android:id="@+id/text_view_chat_time"
+                android:id="@+id/text_view_chat_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentBottom="true"
-                android:text="시간"
-                android:textSize="10dp" />
-        </RelativeLayout>
-    </android.support.v7.widget.CardView>
-</RelativeLayout>
+                android:layout_gravity="center"
+                android:text="순눈이" />
+
+        </LinearLayout>
+
+
+        <TextView
+            android:id="@+id/text_view_chat_chat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="10dp"
+            android:layout_toRightOf="@id/layout_chat_profile"
+            android:text="채팅 내용"
+            android:textSize="12dp" />
+
+        <TextView
+            android:id="@+id/text_view_chat_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:text="시간"
+            android:textSize="10dp" />
+    </RelativeLayout>
+</android.support.v7.widget.CardView>
