--- a/app/src/main/res/layout/fragment_menu1.xml
+++ b/app/src/main/res/layout/fragment_menu1.xml
@@ -10,27 +10,21 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <View
-            android:layout_width="30dp"
-            android:layout_height="65dp" />
-
         <Button
             android:id="@+id/btn_menu1_temp"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="추천도서 조회 TOP 30" />
-
-        <View
-            android:layout_width="30dp"
-            android:layout_height="65dp" />
+            android:background="@color/mainColor"
+            android:text="추천도서 조회 TOP 30"
+            android:textColor="@color/white" />
 
     </LinearLayout>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center"
         android:text="Home"
-        android:textSize="40dp"
-        android:gravity="center"/>
+        android:textSize="40dp" />
 </LinearLayout>
