--- a/app/src/main/res/layout/fragment_menu2.xml
+++ b/app/src/main/res/layout/fragment_menu2.xml
@@ -2,22 +2,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/fragment_menu2"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/boundary">
 
     <Button
         android:id="@+id/btn_make_chat_searchroom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toLeftOf="@id/btn_make_chat_makeroom"
-        android:text="채팅방 검색" />
-
-    <Button
-        android:id="@+id/btn_make_chat_makeroom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_gravity="right"
-        android:text="채팅방 생성" />
+        android:text="채팅방 검색" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floating_chat_add"
@@ -32,7 +25,8 @@
         android:id="@+id/recycler_view_make_chat_chatlist"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/btn_make_chat_makeroom" />
+        android:layout_marginTop="10dp"
+        android:layout_below="@id/btn_make_chat_searchroom" />
 
 
 </RelativeLayout>
