--- a/app/src/main/res/layout/item_chat_room.xml
+++ b/app/src/main/res/layout/item_chat_room.xml
@@ -1,40 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/cardview_chat_room"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
+    <View
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp">
+        android:layout_weight="1" />
 
-        <TextView
-            android:id="@+id/text_view_chat_room_item_room_title"
+    <android.support.v7.widget.CardView
+        android:id="@+id/cardview_chat_room"
+        cardCornerRadius="10dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:layout_weight="3"
+        app:cardElevation="2dp">
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="채팅방 제목"
-            android:maxLines="1"
-            android:textSize="15dp" />
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/text_view_chat_room_item_book_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/text_view_chat_room_item_room_title"
-            android:layout_marginTop="10dp"
-            android:text="이야기 나눌 책"
-            android:textSize="12dp" />
+            <TextView
+                android:id="@+id/text_view_chat_room_item_room_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"
+                android:maxLines="1"
+                android:text="채팅방 제목"
+                android:textColor="@color/black"
+                android:textSize="15dp" />
 
-        <TextView
-            android:id="@+id/text_view_chat_room_item_room_desc"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/text_view_chat_room_item_book_title"
-            android:layout_marginTop="10dp"
-            android:text="채팅방 설명 20자"
-            android:textSize="12dp"
-            android:maxLength="50"/>
-    </RelativeLayout>
-</android.support.v7.widget.CardView>
+            <TextView
+                android:id="@+id/text_view_chat_room_item_book_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/text_view_chat_room_item_room_title"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
+                android:text="이야기 나눌 책"
+                android:textColor="@color/softblack"
+                android:textSize="12dp" />
+
+            <ImageView
+                android:id="@+id/image_chat_room_item_person"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_below="@id/text_view_chat_room_item_book_title"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"
+                android:src="@drawable/ic_person" />
+
+            <TextView
+                android:id="@+id/text_view_chat_room_item_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/image_chat_room_item_person"
+                android:layout_centerHorizontal="true"
+                android:text="참여인원"
+                android:textSize="10dp" />
+
+            <TextView
+                android:id="@+id/text_view_chat_room_item_room_desc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/text_view_chat_room_item_count"
+                android:layout_marginLeft="50dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginRight="50dp"
+                android:layout_marginBottom="30dp"
+                android:maxLength="50"
+                android:text="채팅방 설명 20자"
+                android:textSize="12dp" />
+        </RelativeLayout>
+
+    </android.support.v7.widget.CardView>
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1" />
+</LinearLayout>
