--- a/app/src/main/res/layout/activity_board_retouch.xml
+++ b/app/src/main/res/layout/activity_board_retouch.xml
@@ -1,6 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".Board.RetouchBoardActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="30dp"
+        android:text="글 수정"
+        android:textSize="30dp"
+        android:layout_gravity="center"/>
+
+
+    <EditText
+        android:id="@+id/et_retouch_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="제목을 입력하세요"
+        android:textColor="@android:color/black"
+        android:textSize="20sp"
+        tools:ignore="HardCodedText"/>
+
+    <EditText
+        android:id="@+id/et_retouch_content"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:gravity="top"
+        android:hint="내용을 입력하세요"
+        android:textColor="@android:color/black"
+        android:textSize="18sp"
+        tools:ignore="HardCodedText"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/btn_retouch_board"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="40dp"
+            android:text="변경"
+            tools:ignore="HardCodedText" />
+    </RelativeLayout>
+</LinearLayout>
