--- a/app/src/main/res/layout/activity_book_board.xml
+++ b/app/src/main/res/layout/activity_book_board.xml
@@ -57,6 +57,19 @@
             app:pressedTranslationZ="12dp" />
 
         <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab_recommend"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_marginRight="15sp"
+            android:layout_marginBottom="230dp"
+            android:src="@drawable/ic_recommend"
+            android:visibility="invisible"
+            app:backgroundTint="#ffffff"
+            app:elevation="6dp"
+            app:pressedTranslationZ="12dp" />
+
+        <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
