--- a/app/src/main/res/layout/fragment_menu3.xml
+++ b/app/src/main/res/layout/fragment_menu3.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="100dp">
+    android:layout_margin="80dp">
 
     <TextView
         android:layout_width="wrap_content"
@@ -11,7 +11,7 @@
         android:text="게시판"
         android:textSize="30dp"
         android:layout_gravity="center"
-        android:layout_marginBottom="150dp"/>
+        android:layout_marginBottom="100dp"/>
 
     <Button
         android:id="@+id/btn_in_board"
@@ -25,7 +25,15 @@
         android:id="@+id/btn_search_board"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="30dp"
         android:text="게시판 검색"
+        android:textSize="20dp"/>
+
+    <Button
+        android:id="@+id/btn_search_recommend"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="추천 글"
         android:textSize="20dp"/>
 
     <Button
