--- a/app/src/main/res/layout/fragment_menu1.xml
+++ b/app/src/main/res/layout/fragment_menu1.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/lightGray"
     android:orientation="vertical">
 
     <LinearLayout
@@ -12,12 +13,13 @@
 
         <Button
             android:id="@+id/btn_menu1_temp"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@color/mainColor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/primaryDeep"
             android:text="추천도서 조회 TOP 30"
-            android:textColor="@color/white" />
+            android:textColor="@color/white"
+            android:textSize="16dp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
